GPT로 생성된 이미지를 URL을 이용해 S3에 등록