@@ -6,6 +6,7 @@ import com.aidiary.domain.emotion.dto.ChatGPTReq2;
 import com.aidiary.domain.emotion.dto.ChatGPTRes;
 import com.aidiary.domain.summary.domain.DiarySummary;
 import com.aidiary.domain.summary.domain.repository.DiarySummaryRepository;
+import com.aidiary.domain.s3.service.S3Service;
 import com.aidiary.domain.user.domain.User;
 import com.aidiary.domain.user.domain.repository.UserRepository;
 import com.fasterxml.jackson.databind.JsonNode;
@@ -17,14 +18,10 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.client.RestTemplate;
 
-import java.io.InputStream;
 import java.net.URI;
-import java.net.URL;
 import java.net.http.HttpClient;
 import java.net.http.HttpRequest;
 import java.net.http.HttpResponse;
-import java.nio.file.Files;
-import java.nio.file.Paths;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -41,7 +38,15 @@ public class SummaryService {
     @Value("${openai.api.url}")
     private String apiURL;
 
+    @Value("${openai.api.key}")
+    private String OPENAI_API_KEY;
+
+    @Value("${openai.api.image}")
+    private String imageApiUrl;
+
     private final RestTemplate restTemplate;
+
+    private final S3Service s3Service;
 
 
     private final UserRepository userRepository;
@@ -122,7 +127,7 @@ public class SummaryService {
         try {
             String imageUrl = generateImageFromText(diary);
             if (imageUrl != null) {
-                saveImage(imageUrl, "diary_image.png");
+                s3Service.upload(imageUrl);
                 System.out.println("'diary_image.png'. 이름으로 이미지가 생성되었습니다.");
             } else {
                 System.out.println("이미지 생성에 실패하였습니다.");
@@ -132,10 +137,51 @@ public class SummaryService {
         }
     }
 
+    public void createImage(String content) {
+        try {
+            String imageUrl = generateImageFromText(content);
+            if (imageUrl != null) {
+                s3Service.upload(imageUrl);
+                System.out.println("'diary_image.png'. 이름으로 이미지가 생성되었습니다.");
+            } else {
+                System.out.println("이미지 생성에 실패하였습니다.");
+            }
+        } catch (Exception e) {
+            e.printStackTrace();
+        }
+    }
 
-    private void saveImage(String imageUrl, String filePath) throws Exception {
-        try (InputStream in = new URL(imageUrl).openStream()) {
-            Files.copy(in, Paths.get(filePath));
+    private  String generateImageFromText(String content) throws Exception {
+        HttpClient client = HttpClient.newHttpClient();
+        String requestBody = "{ \"model\": \"dall-e-3\", \"prompt\": \"" + content + "\", \"n\": 1, \"size\": \"1024x1024\" }";
+
+        HttpRequest request = HttpRequest.newBuilder()
+            .uri(URI.create(imageApiUrl))
+            .header("Authorization", "Bearer " + OPENAI_API_KEY)
+            .header("Content-Type", "application/json")
+            .POST(HttpRequest.BodyPublishers.ofString(requestBody))
+            .build();
+
+        HttpResponse<String> response = client.send(request, HttpResponse.BodyHandlers.ofString());
+
+        int statusCode = response.statusCode();
+        System.out.println("HTTP Status Code: " + statusCode);
+        String responseBody = response.body();
+        System.out.println("Response Body: " + responseBody);
+
+        if (statusCode == 200) {
+            ObjectMapper mapper = new ObjectMapper();
+            JsonNode rootNode = mapper.readTree(responseBody);
+
+            if (rootNode.has("data") && rootNode.get("data").isArray()) {
+                return rootNode.get("data").get(0).get("url").asText();
+            } else {
+                System.out.println("No data field found in the response.");
+                return null;
+            }
+        } else {
+            System.out.println("Request failed with status code: " + statusCode);
+            return null;
         }
     }
 
@@ -145,8 +191,8 @@ public class SummaryService {
         String requestBody = "{ \"model\": \"dall-e-3\", \"prompt\": \"" + diary.getContent() + "\", \"n\": 1, \"size\": \"1024x1024\" }";
 
         HttpRequest request = HttpRequest.newBuilder()
-                .uri(URI.create(apiURL))
-                .header("Authorization", "Bearer " + "OPENAI_API_KEY")
+                .uri(URI.create(imageApiUrl))
+                .header("Authorization", "Bearer " + OPENAI_API_KEY)
                 .header("Content-Type", "application/json")
                 .POST(HttpRequest.BodyPublishers.ofString(requestBody))
                 .build();
